--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
     const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-    countdown.innerHTML = `${days}d ${hours}h ${minutes}m ${seconds}s`;
+    countdown.innerHTML = `${days}d ${hours}h ${minutes}m ${seconds}s UTC+1`;
   }
 
   updateCountdown();
