--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
     }
     .time-zone{
       color: var(--highlight);
-      text-decoration: underline;
-      margin: 0 0.5rem;
+      margin: 0.5rem 0 0.5rem;
       font-weight: bold;
     }
     .links a {
