--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     }
     .time-zone{
       color: var(--highlight);
-      margin: 0.5rem 0 0.5rem;
+      margin: 5rem 0 0.5rem;
       font-weight: bold;
     }
     .links a {
@@ -102,7 +102,7 @@
     <a href="https://github.com/codecraftbymustee" target="_blank" rel="noopener noreferrer">GitHub</a>
   </div>
   
-  <div class="time-zone">UTC+1</div>
+  <div class="time-zone">Launching Time Zone: UTC+1</div>
   
   <script>
   const countdown = document.getElementById("countdown");
