--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="project-tab-panels">
                     <div class="project-panel active-panel" role="tabpanel" id="panel-latest" aria-labelledby="tab-latest">
                         <article class="project">
-                            <div class="project-image"><img src="https://www.canva.com/design/DAGtnNkqLbU/yNzyLFiJ0AT8K3_WtRhFIg/view" alt="Screenshot of Mustee Portfolio Website"></div>
+                            <div class="project-image"><img src="project1.png" alt="Screenshot of Mustee Portfolio Website"></div>
                             <p class="project-category" title="Design Category">Portfolio</p>
                             <p class="project-name" title="Design Name">Mustee Portfolio Website</p>
                             <p class="project-description">A personal portfolio site built with modern HTML, CSS, and JavaScript to showcase projects, skills, and services.</p>
