--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                     <div class="project-panel" role="tabpanel" id="panel-portfolio" aria-labelledby="tab-portfolio">
                         <article class="project">
-                            <div class="project-image"><img src="images/portfolio1.png" alt="Screenshot of Mustee Portfolio Website"></div>
+                            <div class="project-image"><img src="images/portfolio-project.webp" alt="Screenshot of Mustee Portfolio Website"></div>
                             <p class="project-category" title="Design Category">Portfolio</p>
                             <p class="project-name" title="Design Name">Mustee Portfolio Website</p>
                             <p class="project-description">A personal portfolio site built with modern HTML, CSS, and JavaScript to showcase projects, skills, and services.</p>
