--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
     <header class="site-header">
         <nav class="container navbar" role="navigation" aria-label="Main Navigation">
-            <a href="#home" class="site-name"><h1>Mustee</h1></a>
+            <a href="https://codecraftbymustee.vercel.app/" class="site-name"><h1>Mustee</h1></a>
             <ul class="nav-links">
-                <li><a href="https://codecraftbymustee.vercel.app/" class="current-page">Home</a></li> 
+                <li><a href="#home" class="current-page">Home</a></li> 
                 <li><a href="#services">Service</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#about">About</a></li>
