--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                     <a href="#contact" class="btn btn--primary">Let's Build Your Website</a>
                     <a href="#portfolio" class="btn btn--secondary">See My Portfolio</a>
                 </div>
+                <p style="color: #b10000; font-weight: bold; text-align: center;">
+  <strong>Note:</strong> This site is currently under construction. Thank you for your patience.
+</p>
+
             </div>
         </section>
         
