--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="site-header">
         <nav class="container navbar" role="navigation" aria-label="Main Navigation">
-            <a href="https://codecraftbymustee.vercel.app/" class="site-name"><h1>Mustee</h1></a>
+            <a href="https://musteecodes.vercel.app/" class="site-name"><h1>Mustee</h1></a>
             <ul class="nav-links">
                 <li><a href="#home" class="current-page">Home</a></li> 
                 <li><a href="#services">Service</a></li>
@@ -535,8 +535,8 @@
                 
                 <div class="contact-links">
                     <a href="mailto:mustee.codes@gmail.com"><i class="fas fa-envelope"></i> mustee.codes@gmail.com</a>
-                    <a href="https://fiverr.com/codecraftbymust" target="_blank"><i class="fas fa-briefcase"></i> Fiverr Profile</a>
-                    <a href="https://github.com/codecraftbymustee" target="_blank"><i class="fab fa-github"></i> GitHub Profile</a>
+                    <a href="https://fiverr.com/musteecodes" target="_blank"><i class="fas fa-briefcase"></i> Fiverr Profile</a>
+                    <a href="https://github.com/musteecodes" target="_blank"><i class="fab fa-github"></i> GitHub Profile</a>
                 </div>
                 <script>
                     
