--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Mustapha – Frontend Developer" />
 <meta name="twitter:description" content="Hi, I'm Mustapha – a frontend developer who builds fast, modern, and responsive websites." />
-<meta name="twitter:image" content="https://musteecodes.vercel.app/images/og-thumbnail.webp" />
+<meta name="twitter:image" content="./images/og-thumbnail.webp" />
 
     
     <title>Mustee | Frontend Developer</title>
