--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             
             <div class="contact-links">
                 <a href="mailto:mustee.codes@gmail.com"><i class="fas fa-envelope"></i> mustee.codes@gmail.com</a>
-                
+                <a href="https://www.fiverr.com/musteecodes" target="_blank"><i class="fab fa-fiverr"></i> Fiverr</a>
                 <a href="https://github.com/musteecodes" target="_blank"><i class="fab fa-github"></i> GitHub Profile</a>
             </div>
             <script>
