--- a/index.html
+++ b/index.html
@@ -221,20 +221,21 @@
                             </div>
                         </article>
                         
-                        <!-- BusinessX Developer Portfolio -->
-                        <article class="project">
-                            <div class="project-image">
-                                <img src="images/portfolio.webp" alt="Screenshot of BusinessX Frontend Developer Portfolio" width="300">
-                            </div>
-                            <p class="project-category">Portfolio Website</p>
-                            <p class="project-name">BusinessX Developer Portfolio</p>
-                            <p class="project-description">
-                                A clean and professional front-end developer portfolio template. Built with semantic HTML, CSS, and JavaScript — ideal for showcasing developer skills and personal branding.
-                            </p>
-                            <div class="project-btns">
-                                <!-- <a href="#" class="btn-live-preview" target="_blank">Live Preview</a> -->
-                            </div>
-                        </article>
+                        <!-- GPA Calculator Project -->
+<article class="project">
+    <div class="project-image">
+        <img src="images/gpa-calc.webp" alt="Screenshot of GPA Calculator App" width="300">
+    </div>
+    <p class="project-category">Web App</p>
+    <p class="project-name">GPA Calculator</p>
+    <p class="project-description">
+        A simple and lightweight GPA calculator built with HTML, CSS, and JavaScript. Enter your courses and grades, then compute your GPA instantly. Designed for students who want a fast, no-frills tool.
+    </p>
+    <div class="project-btns">
+        <!-- <a href="#" class="btn-live-preview" target="_blank">Live Preview</a> -->
+    </div>
+</article>
+
                         
                     </div>
                 </div>
