--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         A simple and lightweight GPA calculator built with HTML, CSS, and JavaScript. Enter your courses and grades, then compute your GPA instantly. Designed for students who want a fast, no-frills tool.
     </p>
     <div class="project-btns">
-        <!-- <a href="#" class="btn-live-preview" target="_blank">Live Preview</a> -->
+        <a href="https://preview-mustee.vercel.app/Mustee-gpa-calc/" class="btn-live-preview" target="_blank">Calculate your GPA</a>
     </div>
 </article>
 
