--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         </article>
                     </div>
                     
-                    <div class="project-panel active-panel" role="tabpanel" id="panel-clone" aria-labelledby="tab-clone">
+                    <div class="project-panel" role="tabpanel" id="panel-clone" aria-labelledby="tab-clone">
                         
                         <div style="background:#111;color:#fff;padding:12px;text-align:center;font-weight:600;">
                             THIS IS A PERSONAL CLONE / REBUILD — NOT AFFILIATED WITH any business/organizations whose name is mentioned or cited. Created for learning and portfolio purposes only.
