Update Twitter image path in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       name="twitter:description"
       content="Hi, I'm Mustapha – a frontend developer who builds fast, modern, and responsive websites."
     />
-    <meta name="twitter:image" content="./images/og-thumbnail.webp" />
+    <meta name="twitter:image" content="/assets/images/og-thumbnail.webp" />
 
     <title>Mustee | Frontend Developer</title>
     <link rel="stylesheet" href="/assets/styles/global.css" />
