--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
       content="Frontend Developer, HTML, CSS, JavaScript, Portfolio, Web Developer Nigeria, Mustee, Mustapha"
     />
     <meta name="robots" content="index, follow" />
-
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Mustapha – Frontend Developer" />
+    <meta
+      property="og:description"
+      content="Hi, I'm Mustapha – a frontend developer who builds fast, modern, and responsive websites."
+    />
+    <meta
+      property="og:image"
+      content="https://musteecodes.vercel.app/assets/images/og-thumbnail.webp"
+    />
+    <meta property="og:url" content="https://musteecodes.vercel.app/" />
+    <meta property="og:site_name" content="Mustee" />
+    
     <!-- Twitter og -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mustapha – Frontend Developer" />
